--- a/src/components/JourneyNoteCard.module.css
+++ b/src/components/JourneyNoteCard.module.css
@@ -16,7 +16,6 @@
 }
 
 .container {
-    width: 320px;
     height: 400px;
     display: flex;
     flex-direction: column;
